--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
             <a href="https://dai.fancode.com/primary/89945_english_hls_1751ta-no/720p.m3u8">
                 <button>WATCH NOW</button>
 
-            
-           
         </a>
+<br>
+<h2>INDIA VS SOUTH AFRICA</h2>
+<ahref="https://star1-cricstreaming.vercel.app/">
+<button> WATCH NOW</button>
+</a>
     </div>
     <br><br>
    <lable for ="name">NAME:</lable>
