--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+lo<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
         </a>
 <br>
 <h2>INDIA VS SOUTH AFRICA</h2>
-<ahref="https://star1-cricstreaming.vercel.app/">
+<a href="https://star1-cricstreaming.vercel.app/">
 <button> WATCH NOW</button>
 </a>
     </div>
