--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-lo<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@ lo<!DOCTYPE html>
 <body>
     <div class="my-container">
         <h1>NANDHU</h1>
-        <H4><b>BIG FAN OF VIRAT KOHLI</b></H4>
+        <H4><b> FAN OF VIRAT KOHLI</b></H4>
         <img src="C:\Users\shshidhar\.vscode\.vscode\NANDHU.html\images.jpg" height="300" width="300>"
         <br>
         <hr>
