--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         </a>
 <br>
-<h2>INDIA VS SOUTH AFRICA</h2>
-<a href="https://star1-cricstreaming.vercel.app/">
+<h2>INDIA VS AFGANISTAN</h2>
+<a href="https://prod-ent-live-gm.jiocinema.com/hls/live/2100323/hd_akamai_androidmob_avc_hin_t2002140124/master_720p.m3u8">
 <button> WATCH NOW</button>
 </a>
     </div>
