--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
 <br>
 <h2>MI VS CSK</h2>
-<a href="https://prod-ent-live-gm.jiocinema.com/hls/live/2100299/hd_akamai_androidmob_avc_eng_t2002140124/master_720p.m3u8">
+<a href="https://prod-sports-eng-gm.jiocinema.com/hls/live/2100306/hd_akamai_iosmob_avc_eng_ipl_s2_m2140424/master_1080p.m3u8">
 <button> WATCH NOW</button>
 </a>
     </div>
