--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         </a>
 <br>
-<h2>MI VS CSK</h2>
-<a href="https://prod-sports-eng-gm.jiocinema.com/hls/live/2100306/hd_akamai_iosmob_avc_eng_ipl_s2_m2140424/master_1080p.m3u8">
+<h2>IND VS IRE</h2>
+<a href="https://ast-criclive.pages.dev/">
 <button> WATCH NOW</button>
 </a>
     </div>
