--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="my-container">
         <h1>NANDHU</h1>
         <H4><b> FAN OF VIRAT KOHLI</b></H4>
-        <img src="C:\Users\shshidhar\.vscode\.vscode\NANDHU.html\images.jpg" height="300" width="300>"
+        <img src="https://github.com/NARENDRA8985/MY-FIRST-WEB-22/blob/main/images.jpg" height="300" width="300>"
         <br>
         <hr>
         <p><I>VIRAT KOHLI</I> born 5 November 1988) is an Indian international cricketer.<br> and the 
