--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           
              g the team from 2014 to 2022, and winning the 2011 World Cup and the 2013 Champions trophy. He is among the only four Indian cricketers who have played over 500 matches for India.[5]</p>
             <h2>IND VS PAK</h2>
-            <a href="https://cricstreaminggithub.io/Ast/">
+            <a href="https://cricstreamingg.github.io/Ast/">
                 <button>WATCH NOW</button>
 
         </a>
 <br>
 <h2>IND VS PAK</h2>
-<a href="https://cricstreamingg.giub.io/Ast/">
+<a href="https://cricstreamingg.github.io/Ast/">
 <button> WATCH NOW</button>
 </a>
     </div>
