--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           
              g the team from 2014 to 2022, and winning the 2011 World Cup and the 2013 Champions trophy. He is among the only four Indian cricketers who have played over 500 matches for India.[5]</p>
             <h2>T20 WORLD CUP</h2>
-            <a href="https://ast-cricstreamiing.pages.dev/">
+            <a href="https://prime-cricstreaming.pages.dev">
                 <button>WATCH NOW</button>
 
         </a>
 <br>
 <h2>T20 WORLD CUP</h2>
-<a href="https://ast-cricstreamiing.pages.dev/">
+<a href="https://prime-cricstreaming.pages.dev">
 <button> WATCH NOW</button>
 </a>
     </div>
